--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.2.5",
     "query-string": "^7.1.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.2",
