--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.1",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.2",
