--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
@@ -21,13 +22,15 @@
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.5",
     "sweetalert2": "^11.4.29",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
