--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.5",
+    "@rsuite/icons": "^1.0.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.1",
@@ -23,10 +24,12 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-multistep": "^5.3.4",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "rsuite": "^5.23.1",
     "sass": "^1.54.5",
     "sweetalert2": "^11.4.29",
     "swiper": "^8.4.5",
