--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-multistep": "^5.3.4",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.2",
+    "react-select": "^5.7.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "rsuite": "^5.23.1",
